Second Bodog Test
Added SignInBodogTest, Assertions, and new csv file, and fixture package
updated worker, utils, config

--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -1,7 +1,16 @@
 #Website
 BASE_URL=http://www.google.com
+
+#Login
 TEST_URL=http://www.bodog.eu
-
-
-ERR_MSG=Oops! You entered an Invalid Account # or Email / Password Combination.
 URL_TITLE=Online Poker, Casino, Sports Betting, Horse Racing at Bodog
+ERR_MSG=Oops! You entered an Invalid Account # or Email / Password Combination.
+
+#Register
+REG_URL=bodog.net/join
+REG_TITLE=Open your Bodog account | Play free poker and fantasy sports contests with bodog.net
+REG_ERROR=You have not successfully opened an account.
+REG_CONFIRM=You have successfully opened an account.
+
+
+
